# HotSPa-AE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hetu_refactor.exp
hetu/: CMakeLists.txt
hetu/autograd/: autograd.cc  autograd.h  common.h  dataloader.cc  dataloader.h  distributed_states.cc  distributed_states.h  op_meta.cc  op_meta.h  operator.cc  operator.h  runtime_context.cc  runtime_context.h  tensor.cc  tensor.h  threadpool.cc  threadpool.h  topo.cc  topo.h
hetu/autograd/init/: initializer.cc  initializer.h
hetu/autograd/ops/: Arange.cc  Arange.h  Arithmetics.cc  Arithmetics.h  AsStrided.cc  AsStrided.h  AvgPool.cc  AvgPool.h  BatchMatMul.cc  BatchMatMul.h  BatchNorm.cc  BatchNorm.h  BinaryCrossEntropy.cc  BinaryCrossEntropy.h  Bool.cc  Bool.h  Broadcast.cc  Broadcast.h  BroadcastShape.cc  BroadcastShape.h  Communicate.cc  Communicate.h  Concat.cc  Concat.h  Concatenate.cc  Concatenate.h  Conv2d.cc  Conv2d.h  Conv2dBroadcast.cc  Conv2dBroadcast.h  Conv2dReduceSum.cc  Conv2dReduceSum.h  DataTransfer.cc  DataTransfer.h  Dropout.cc  Dropout.h  Dropout2d.cc  Dropout2d.h  Einsum.cc  Einsum.h  (+90 more)
hetu/autograd/optim/: Optimizer.cc  Optimizer.h
hetu/autograd/utils/: tensor_utils.h
hetu/common/: collection_streaming.h  except.h  logging.cc  logging.h  macros.h  timing.h
hetu/core/: bfloat16.cc  bfloat16.h  binary_type.cc  binary_type.h  device.cc  device.h  dtype.cc  dtype.h  float16.cc  float16.h  memory_pool.cc  memory_pool.h  ndarray.cc  ndarray.h  ndarray_meta.cc  ndarray_meta.h  ndarray_storage.cc  ndarray_storage.h  reduction_type.cc  reduction_type.h  stream.cc  stream.h  symbol.cc  symbol.h
hetu/execution/: dar_executor.cc  dar_executor.h  dbr_executor.cc  dbr_executor.h  device_placer.cc  device_placer.h  run_metadata.cc  run_metadata.h
hetu/graph/: common.h  define_and_run_graph.cc  define_and_run_graph.h  define_by_run_graph.cc  define_by_run_graph.h  distributed_states.cc  distributed_states.h  eager_graph.cc  eager_graph.h  executable_graph.cc  executable_graph.h  graph.cc  graph.h  headers.h  operator.cc  operator.h  profiler.cc  profiler.h  switch_exec_graph.cc  switch_exec_graph.h  switch_utils.cc  tensor.cc  tensor.h
hetu/graph/autocast/: autocast.cc  autocast.h  gradscaler.cc  gradscaler.h
hetu/graph/data/: dataloader.cc  dataloader.h
hetu/graph/init/: initializer.cc  initializer.h
hetu/graph/ops/: Abs.cc  Abs.h  Arange.cc  Arange.h  Arithmetics.cc  Arithmetics.h  AsStrided.cc  AsStrided.h  Attention.cc  Attention.h  AvgPool.cc  AvgPool.h  BatchMatMul.cc  BatchMatMul.h  BatchNorm.cc  BatchNorm.h  Bool.cc  Bool.h  Broadcast.cc  Broadcast.h  Ceil.cc  Ceil.h  CheckFinite.cc  CheckFinite.h  Communication.cc  Communication.h  Concat.cc  Concat.h  Concatenate.cc  Concatenate.h  Contiguous.cc  Contiguous.h  Conv2d.cc  Conv2d.h  Diagonal.cc  Diagonal.h  Dropout.cc  Dropout.h  Dropout2d.cc  Dropout2d.h  (+122 more)
hetu/graph/optim/: optimizer.cc  optimizer.h
hetu/graph/utils/: tensor_utils.h
hetu/impl/communication/: comm_group.cc  comm_group.h  mpi_comm_group.cc  mpi_comm_group.h  nccl_comm_group.cu  nccl_comm_group.h
hetu/impl/cuda/: CUDABlas.cc  CUDABlas.h  CUDADnn.cc  CUDADnn.h  CUDARand.cc  CUDARand.h
hetu/impl/kernel/: Abs.cc  Abs.cu  Arange.cc  Arange.cu  ArraySet.cc  ArraySet.cu  AsStrided.cc  AsStrided.cu  AvgPool.cc  AvgPool.cu  Baddbmm.cu  BatchMatMul.cc  BatchMatMul.cu  BatchNorm.cc  BatchNorm.cu  Binary.cuh  BinaryConst.cc  BinaryConst.cu  BinaryCrossEntropy.cc  BinaryCrossEntropy.cu  BinaryElewise.cc  BinaryElewise.cu  Bool.cc  Bool.cu  Broadcast.cc  Broadcast.cu  BroadcastShape.cc  BroadcastShape.cu  CheckFinite.cu  Clamp.cu  Communicate.cc  Communicate.cu  Concat.cc  Concat.cu  Concatenate.cc  Concatenate.cu  Contiguous.cc  Contiguous.cu  Conv2d.cc  Conv2d.cu  (+125 more)
hetu/impl/memory/: CPUMemoryPool.cc  CPUMemoryPool.h  CUDABFCMemoryPool.cu  CUDABFCMemoryPool.cuh  CUDACachingMemoryPool.cu  CUDACachingMemoryPool.cuh  CUDAMemoryPool.cuh  CUDAStreamOrderedMemoryPool.cu  CUDAStreamOrderedMemoryPool.cuh
hetu/impl/random/: CPURandomState.cc  CPURandomState.h  CUDARandomState.cc  CUDARandomState.h
hetu/impl/stream/: CPUStream.cc  CPUStream.h  CUDAStream.cc  CUDAStream.h
hetu/impl/utils/: common_utils.h  cuda_math.h  cuda_utils.cu  cuda_utils.h  dispatch.h  dnnl_utils.h  ndarray_utils.h  numeric_utils.h  offset_calculator.cu  offset_calculator.cuh  omp_utils.h
hetu/utils/: builder.h  context_store.h  optional.h  shared_ptr_wrapper.h  simple_math.h  string_utils.h  task_queue.h  unordered_dense.h
python_refactor/: CMakeLists.txt
python_refactor/elastic/: setup.py
python_refactor/elastic/elastic.egg-info/: PKG-INFO
python_refactor/elastic/engine/: __init__.py  parallel_config.py  straggler.py  strategy.py  trainer.py  utils.py  wrapper.py
python_refactor/elastic/engine/data_utils/: __init__.py  gpt_dataloader.py  gpt_seq_dataset.py
python_refactor/elastic/models/gpt/: __init__.py  gpt_config.py  gpt_model.py
python_refactor/hetu/: __init__.py
python_refactor/hetu/_binding/: constants.h  module.cc
python_refactor/hetu/_binding/autograd/: function_registry.cc  function_registry.h  operator.cc  operator.h  tensor.cc  tensor.h  tensor_ctor.cc  tensor_ctor.h
python_refactor/hetu/_binding/codegen/: args_bridge.py  gen_py_ops.py  ops.yml
python_refactor/hetu/_binding/core/: device.cc  device.h  dtype.cc  dtype.h  ndarray.cc  ndarray.h  stream.cc  stream.h  symbol.cc  symbol.h
python_refactor/hetu/_binding/distributed/: comm_group.cc  comm_group.h
python_refactor/hetu/_binding/execution/: dar_executor.cc  dar_executor.h
python_refactor/hetu/_binding/graph/: adamoptimizer.cc  adamoptimizer.h  autocast.cc  autocast.h  dataloader.cc  dataloader.h  distributed_states.cc  distributed_states.h  gradscaler.cc  gradscaler.h  graph.cc  graph.h  operator.cc  operator.h  sgdoptimizer.cc  sgdoptimizer.h  tensor.cc  tensor.h  tensor_ctor.cc  tensor_ctor.h
python_refactor/hetu/nn/: __init__.py  functional.py  init.py  parameter.py
python_refactor/hetu/optim/: optimizer.py  sgd.py
python_refactor/hetu/utils/: __init__.py
(+76 files in other folders)
